# algokit-subscriber-luca-py

./: .pre-commit-config.yaml  pyproject.toml
.github/workflows/: build-python.yaml  cd.yaml  check-python.yaml
docs/: api_build.py  astro.config.mjs  package.json  pnpm-lock.yaml  sidebar.config.json
docs/sphinx/: conf.py
docs/src/content/docs/: index.mdx
docs/src/content/docs/concepts/: arc28-events.md  emit-arc28-events.md  fast-catchup.md  filtering.md  inner-transactions.md  low-latency.md  state-proofs.md  sync-behaviour.md  watermarking.md
docs/src/content/docs/guide/: subscriber.md  subscriptions.md
docs/src/content/docs/tutorials/: quick-start.md
examples/governance/: governance.py
examples/live_monitoring/: live_monitoring.py
examples/payments/: payments.py
examples/transaction_recording/: transaction_recording.py
examples/usdc/: usdc.py
src/algokit_subscriber/: indexer_lookup.py  subscriber.py  subscription.py  transform.py
src/algokit_subscriber/types/: arc28.py  block.py  event_emitter.py  indexer.py  subscription.py
tests/: accounts.py  filter_fixture.py  test_balance_changes.py  test_complex_txns.py  test_fail.py  test_filters.py  test_multiple_filters.py  test_subscriber.py  transactions.py
tests/contracts/: testing_app_client.py
